--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -7,3 +7,11 @@ updates:
       - actions
     schedule:
       interval: daily
+
+  - package-ecosystem: npm
+    directory: /
+    labels:
+      - dependabot
+      - npm
+    schedule:
+      interval: daily
