--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
-  "printWidth": 80,
+  "printWidth": 100,
   "tabWidth": 4,
-  "useTabs": false,
+  "useTabs": true,
   "semi": false,
   "singleQuote": true,
   "quoteProps": "as-needed",
