--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "scripts": {
     "prepare": "husky install",
     "clean": "rm -rf dist && rm -rf node_modules/ && rm -rf package-lock.json && npm install",
-    "format:write": "prettier --write **/*.ts",
-    "format:check": "prettier --check **/*.ts",
+    "format:write": "prettier --write .",
+    "format:check": "prettier --check .",
     "lint": "npx eslint",
     "package": "ncc build src/index.ts -e @pulumi/pulumi -e google-protobuf -e protobufjs -e @grpc/grpc-js --minify --out dist/",
     "package:watch": "npm run package -- --watch",
