--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/losisin/gcp-pac/issues"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   },
   "keywords": [
     "pulumi",
@@ -41,10 +41,10 @@
     "@pulumi/policy": "^1.3.0"
   },
   "devDependencies": {
-    "@pulumi/pulumi": "^3.0.0",
-    "@types/node": "18",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
+    "@pulumi/pulumi": "^3.100.0",
+    "@types/node": "^20.10.6",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.0",
     "@vercel/ncc": "^0.38.1",
     "eslint": "^8.56.0",
     "eslint-plugin-jsonc": "^2.11.2",
