--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "typescript"
   ],
   "scripts": {
-    "prepare": "husky install",
     "clean": "rm -rf dist && rm -rf node_modules/ && rm -rf package-lock.json && npm install",
     "format:write": "prettier --write .",
     "format:check": "prettier --check .",
@@ -35,7 +34,8 @@
     "package": "ncc build src/index.ts -e @pulumi/pulumi -e google-protobuf -e protobufjs -e @grpc/grpc-js --minify --out dist/",
     "package:watch": "npm run package -- --watch",
     "bundle": "npm run package && node scripts/setup.mjs",
-    "publish": "npm publish --access public dist/"
+    "publish": "npm publish --access public dist/",
+    "prepare": "husky || true"
   },
   "dependencies": {
     "@pulumi/policy": "^1.9.0"
@@ -49,7 +49,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-jsonc": "^2.13.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^8.0.3",
+    "husky": "^9.0.1",
     "js-yaml": "^4.1.0",
     "prettier": "^3.2.4",
     "prettier-eslint": "^16.3.0",
