Dependabot versioning strategy
Signed-off-by: Aleksandar Stojanov <me@fnd.works>

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -7,6 +7,7 @@ updates:
       - actions
     schedule:
       interval: daily
+    versioning-strategy: increase
 
   - package-ecosystem: npm
     directory: /
@@ -15,3 +16,4 @@ updates:
       - npm
     schedule:
       interval: daily
+    versioning-strategy: increase
