--- a/package.json
+++ b/package.json
@@ -34,25 +34,23 @@
     "package": "ncc build src/index.ts -e @pulumi/pulumi -e google-protobuf -e protobufjs -e @grpc/grpc-js --minify --out dist/",
     "package:watch": "npm run package -- --watch",
     "bundle": "npm run package && node scripts/setup.mjs",
-    "publish": "npm publish --access public dist/",
-    "prepare": "husky || true"
+    "publish": "npm publish --access public dist/"
   },
   "dependencies": {
-    "@pulumi/policy": "^1.12.0"
+    "@pulumi/policy": "^1.13.0"
   },
   "devDependencies": {
-    "@pulumi/pulumi": "^3.133.0",
-    "@types/node": "^22.5.5",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "@typescript-eslint/parser": "^8.6.0",
-    "@vercel/ncc": "^0.38.1",
+    "@pulumi/pulumi": "^3.142.0",
+    "@types/node": "^22.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "@vercel/ncc": "^0.38.3",
     "eslint": "^8.57.1",
-    "eslint-plugin-jsonc": "^2.16.0",
+    "eslint-plugin-jsonc": "^2.18.2",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.6",
     "js-yaml": "^4.1.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "prettier-eslint": "^16.3.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.7.2"
   }
 }
