--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,9 +22,8 @@ jobs:
         id: setup-node
         uses: actions/setup-node@v6
         with:
-          node-version: 20
-          cache: npm
-          registry-url: https://registry.npmjs.org
+          node-version: '24'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install Dependencies
         id: npm-ci
@@ -36,4 +35,4 @@ jobs:
 
       - name: Publish to NPM
         id: npm-publish
-        run: npm publish dist/
+        run: npm publish dist
