fix: npm publish
Signed-off-by: Aleksandar Stojanov <me@fnd.works>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,4 +35,4 @@ jobs:
 
       - name: Publish to NPM
         id: npm-publish
-        run: npm publish dist --access public
+        run: npm run publish
